--- a/gestion_projet/CR_21-09-2023.md
+++ b/gestion_projet/CR_21-09-2023.md
@@ -14,7 +14,7 @@ Nous avons essayé de comprendre les attendus du projet, de comprendre le lien e
 
 Nous avons ainsi compris que le contexte du projet était défini dans l'EPP_V1, avec un schéma correspondant a priori aux fichiers *.sql* fournis. Ce schéma est incomplet et ne contient notamment pas de contraintes. La première étape sera donc de corriger ce schéma pour qu'il corresponde aux exigences de la V2. Ensuite nous pourrons procéder aux améliorations requises par la V2.
 
-Nous avons créé un repo GitHub pour le projet, qui contient notamment les fichiers *.sql* fournis et sur lequel nous pourrons aussi tenir à jour une TODO list qui répartira les lots de travail entre les membres du groupe comme défini lors des réunions succéssives.
+Nous avons créé un repo GitHub pour le projet, qui contient notamment les fichiers *.sql* fournis et sur lequel nous pourrons aussi tenir à jour une TODO list qui répartira les lots de travail entre les membres du groupe comme défini lors des réunions successives.
 
 ### Déroulement du projet
 
