--- a/gestion_projet/CR2_23-09-2023.md
+++ b/gestion_projet/CR2_23-09-2023.md
@@ -32,6 +32,8 @@ Enfin nous pourrons intégrer les données de l'EPP_V2.
 
 - Comment peut-on avoir des mesures invalides ?
 
+- Faut-il ajouter l'incertitude pour chaque mesure ?
+
 - Besoin de stocker le nom des agents d'entretien ?
 
 - Table pour types de hors-service
