--- a/gestion_projet/J1/SEM/SEM.tex
+++ b/gestion_projet/J1/SEM/SEM.tex
@@ -14,7 +14,7 @@
 \newpage
 
 \section{Introduction}
-\subsection*{Objet de portée du document}
+\subsection*{Objet et portée du document}
 Ce document a pour but de spécifier les exigences du jalon 1 du projet "Système
 de surveillance de la qualité de l'air" (SSQA). Il est destiné aux membres du 
 groupe de travail, afin de leur permettre de cerner correctement les besoins
