--- a/gestion_projet/J1/SCBD/SCBD.tex
+++ b/gestion_projet/J1/SCBD/SCBD.tex
@@ -14,7 +14,7 @@
 \newpage
 
 \section{Introduction}
-\subsection*{Objet de portée du document}
+\subsection*{Objet et portée du document}
 Ce document a pour but de décrire les modifications à apporter à la base de données
 SSQA afin de répondre aux exigences formulées dans la
 spécifiation des exigences du modèle.
