--- a/gestion_projet/J2/CR/CR5_07_10_2023.md
+++ b/gestion_projet/J2/CR/CR5_07_10_2023.md
@@ -15,23 +15,23 @@ Nous allons donc commencer par implémenter les fonctions atomiques et des fonct
 et enfin les requêtes complexes à partir de celles-ci.
 
 Les fonction seront réparties dans des fichiers de la manière suivante :
-- `3.1.0_atomic_Station` : fonctions atomiques sur les stations
-- `3.2.0_atomic_Variable` : fonctions atomiques sur les variables
-- `3.3.0_atomic_Mesure` : fonctions atomiques sur les mesures
-- `3.4.0_atomic_Territoire` : fonctions atomiques sur les territoires
+- `3.1.0_SSQA_EMIR_Territoire` : fonctions atomiques sur les territoires
+- `3.2.0_SSQA_EMIR_Station` : fonctions atomiques sur les stations
+- `3.3.0_SSQA_EMIR_Mesure` : fonctions atomiques sur les mesures
+- `3.4.0_SSQA_EMIR_Variable` : fonctions atomiques sur les variables
 - `3.5.0_utils` : fonctions utilitaires (IQA, etc)
 
 Les test seront répartis dans des fichiers de la manière suivante (s'il y a lieu) :
-- `3.1.1_test-val` : tests valides sur les fonctions atomiques sur les stations
-- `3.2.1_test-val` : tests valides sur les fonctions atomiques sur les variables
+- `3.1.1_test-val` : tests valides sur les fonctions atomiques sur les territoires
+- `3.2.1_test-val` : tests valides sur les fonctions atomiques sur les stations
 - `3.3.1_test-val` : tests valides sur les fonctions atomiques sur les mesures
-- `3.4.1_test-val` : tests valides sur les fonctions atomiques sur les territoires
+- `3.4.1_test-val` : tests valides sur les fonctions atomiques sur les variables
 - `3.5.1_test-val` : tests valides sur les fonctions utilitaires (IQA, etc)
 
-- `3.1.2_test-inv` : tests invalides sur les fonctions atomiques sur les stations
-- `3.2.2_test-inv` : tests invalides sur les fonctions atomiques sur les variables
+- `3.1.2_test-inv` : tests invalides sur les fonctions atomiques sur les territoires
+- `3.2.2_test-inv` : tests invalides sur les fonctions atomiques sur les stations
 - `3.3.2_test-inv` : tests invalides sur les fonctions atomiques sur les mesures
-- `3.4.2_test-inv` : tests invalides sur les fonctions atomiques sur les territoires
+- `3.4.2_test-inv` : tests invalides sur les fonctions atomiques sur les variables
 - `3.5.2_test-inv` : tests invalides sur les fonctions utilitaires (IQA, etc)
 
 ### Prochaine réunion
