--- a/gestion_projet/J2/Rapport/rapport_J2.tex
+++ b/gestion_projet/J2/Rapport/rapport_J2.tex
@@ -1,5 +1,7 @@
 \documentclass{report}
 
+\usepackage{markdown}
+
 \begin{document}
 
 \title{SSQA : Jalon 2}
@@ -8,17 +10,75 @@
 \date{\today}
 \maketitle
 
-\section{Introduction}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, velit vel bibendum bibendum, elit elit bibendum elit, vel bibendum elit elit elit. 
+\chapter{Organisation}
+\section{Réunions}
+Nous avons fait une réunion directement après la réception du sujet
+afin de nous mettre d'accord sur les grandes lignes du projet et
+de s'assurer de notre compréhension de l'énoncé. Nous avons ainsi pu
+nous mettre d'accord sur les outils à utiliser et sur la manière
+dont nous allions nous organiser pour ce jalon. (cf. Annexe CR4)
 
-\section{Code Selection}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, velit vel bibendum bibendum, elit elit bibendum elit, vel bibendum elit elit elit. 
+Nous nous sommes ensuite réunis à nouveau quelques jours plus tard
+afin de créer les lots de travail et de nous les répartir. (cf. Annexe CR5)
 
-\begin{verbatim}
-// Your code selection goes here
-\end{verbatim}
 
-\section{Conclusion}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, velit vel bibendum bibendum, elit elit bibendum elit, vel bibendum elit elit elit. 
+\chapter{Solutions aux problèmes du Jalon 1}
+\section{Prise en main du projet}
+Nous avons pris le temps d'éclaircir les points de l'énoncé qui
+nous paraissaient obscurs avec M. Lavoie avant de commencer à
+travailler sur le projet, cela concernait notamment les technologies
+à utiliser ou non et la manière de rédiger les documents de
+conception et de spécification du Jalon 2 en fonction de ce qui
+avait été fait pour le Jalon 1.
 
+\section{Travail simultané}
+Nous nous sommes appliqués à créer des lots de travail qui
+pouvaient être réalisés en parallèle afin de gagner du temps.
+Par exemple, nous avons commencer la rédaction des fonctions de
+production de rapport avant d'avoir fini la création des fonctions
+atomiques, dans le but de les refactoriser par la suite si besoin.
+
+Nous avons également fait une point ensemble sur les exigences
+du projet afin de pouvoir commencer à travailler sur les différents
+lots pendant la rédaction du SEM.
+
+\section{Manque de temps}
+Les solutions mises en place pour les problèmes précédents et notre expérience
+du Jalon 1 nous
+ont permis de gagner du temps et d'être efficace sur
+la rédaction du rapport et la mise au propre des SCBD, SEM
+et Rapport dans les derniers jours avant la date de rendu.
+
+\chapter{Problèmes rencontrés}
+\section{Mise en commun du travail effectué}
+La création de lots de travail les plus indépendants possibles
+nous a permis de travailler en parallèle sur le projet, mais
+a aussi eu comme conséquence de rendre plus difficile la compréhension
+par chacun du travail effectué par les autres. L'étape de refactorisation
+des fonctions de production de rapport en a donc pâti puisque nous nous
+sommes rendus compte très tard que les fonctions de production de rapport
+qui avaient été rédigées étaient incorrectes.
+
+Il aurait peut-être été bénéfique de faire une réunion de plus
+pour que chacun puisse présenter son travail aux autres et qu'il puisse
+être validé par le reste du groupe et ainsi répérer les erreurs plus tôt.
+
+\chapter{Conclusion}
+Nous sommes satisfaits du travail que nous avons effectué pour ce jalon.
+Nous avons réussi à nous organiser efficacement pour travailler en parallèle
+et à nous répartir les tâches de manière équilibrée, ce qui nous a permis
+de gagner du temps et de ne pas avoir à travailler dans l'urgence
+les derniers jours avant la date de rendu.
+
+Nous avons mis en place des solutions pour les problèmes que nous avions
+rencontrés lors du Jalon 1, ce qui nous a permis de ne pas les retrouver
+pour ce jalon et nous tâcherons de continuer à les appliquer pour les
+jalons suivants ainsi que d'autres solutions aux problèmes que nous
+avons rencontrés pour ce jalon.
+
+\chapter*{Annexes - Compte-rendus de réunion}
+
+% \markdownInput{./CR4.md}
+
+% \markdownInput{./CR5.md}
 \end{document}
