--- a/gestion_projet/J3/Rapport/rapport_J3.tex
+++ b/gestion_projet/J3/Rapport/rapport_J3.tex
@@ -35,7 +35,7 @@ questions sur le sujet et lui soumettre nos idées.
 \section{Travail simultané (Jalon 1)}
 Ne trouvant pas de solution satisfaisante pour ce problème, dans le cadre du jalon 3 qui
 nous semblait ne pas contenir assez de tâches distinctes, nous avons décidé de ne pas scinder
-le travail en lots de travail et de travailler en parallèle sur le projet.
+le travail en lots de travail et de travailler ensemble sur chaque tâche.
 
 \section{Mise en commun du travail effectué (Jalon 2)}
 Nous nous étions rendu compte lors du jalon 2 que nous avions pris trop de temps à mettre
