--- a/gestion_projet/J3/SCBD/SCBD.tex
+++ b/gestion_projet/J3/SCBD/SCBD.tex
@@ -108,8 +108,8 @@ ni de table d'intervention ce qui rend impossible l'ajout de ce processus.
 \subsection{Modifications de l'API}
 \subsubsection*{Solution choisie}
 Nous avons décidé d'ajouter l'insertion des données dans l'entrepôt aux primitives
-ÉMIR de l'API. Dans la plupart des cas, il s'est agit simplement d'ajouter quelques
-lignes de code dans les primitives d'insertion dans la base de données relationnelle
+ÉMIR de l'API. Dans la plupart des cas, il s'est agit simplement d'ajouter un bloc de code 
+dans les primitives d'insertion dans la base de données relationnelle
 afin d'insérer également les données dans l'entrepôt.
 
 Le processus de déplacement est un peu particulier : l'insertion d'un déplacement
